Allow multiple players in one team